# blog-with-rust

./: .env  .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yaml
migrations/2022-06-22-005004_create_posts/: up.sql
src/: main.rs  models.rs
templates/: index.html  posts.html
